# carapace

./: components.d.ts  package.json  tsconfig.json  typed-router.d.ts  vite.config.mts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/client/: db.rs  mod.rs  models.rs
src-tauri/src/server/: handler.rs  mod.rs  models.rs
src-tauri/src/shared/: db.rs  mod.rs  models.rs  pki.rs  rpc.rs  rpc_models.rs  ski.rs
src/components/: Term.vue
src/layouts/: default.vue
src/layouts/default/: AppBar.vue
src/pages/: index.vue  messages.vue  shells.vue
src/plugins/: vuetify.ts
src/store/: app.ts
