[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
p256 = {version = "0.13.2", features = ["pem"] }
rand_core = "0.6.4"
directories = "5.0.1"
base64 = "0.21.7"
sqlite = "0.33.0"
aes-gcm = "0.10.3"
sha256 = "1.5.0"
hex = "0.4.3"
once_cell = "1.19.0"
uuid = "1.7.0"
sled = "0.34.7"
async-std = "1.12.0"
futures = "0.3.30"
rsa = {version = "0.9.6", features = ["sha2", "serde"]}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
